Use List.of whereever possible