@@ -25,7 +25,6 @@ import java.sql.ResultSet;
 import java.sql.SQLException;
 import java.sql.Statement;
 import java.time.DayOfWeek;
-import java.util.Arrays;
 import java.util.List;
 import java.util.function.BiConsumer;
 import org.junit.jupiter.api.DisplayName;
@@ -96,7 +95,7 @@ public class MetadataResultSetTest {
     final String column1Name = "COLUMN1";
 
     try (final Statement statement = connection.createStatement(); ) {
-      for (final String value : Arrays.asList("1", "TRUE", "True", "true", "YES", "Yes", "yes")) {
+      for (final String value : List.of("1", "TRUE", "True", "true", "YES", "Yes", "yes")) {
         final String sql =
             String.format("SELECT '%s' AS " + column1Name + " FROM (VALUES(0))", value);
         try (final MetadataResultSet results =
@@ -110,7 +109,7 @@ public class MetadataResultSetTest {
       }
 
       for (final String value :
-          Arrays.asList("0", "FALSE", "False", "false", "NO", "No", "no", "", "unknown")) {
+          List.of("0", "FALSE", "False", "false", "NO", "No", "no", "", "unknown")) {
         final String sql =
             String.format("SELECT '%s' AS " + column1Name + " FROM (VALUES(0))", value);
         try (final MetadataResultSet results =
@@ -175,8 +174,7 @@ public class MetadataResultSetTest {
 
     try (final Statement statement = connection.createStatement(); ) {
       for (final String dataType :
-          Arrays.asList(
-              "CHARACTER(1) ", "VARCHAR(1)", "CLOB", "BINARY(1)", "VARBINARY(1)", "BLOB")) {
+          List.of("CHARACTER(1) ", "VARCHAR(1)", "CLOB", "BINARY(1)", "VARBINARY(1)", "BLOB")) {
 
         statement.execute("DROP TABLE IF EXISTS TABLE1");
         statement.execute("CREATE TABLE TABLE1(COLUMN1 %s)".formatted(dataType));
@@ -256,7 +254,7 @@ public class MetadataResultSetTest {
 
     try (final Statement statement = connection.createStatement(); ) {
       for (final String dataType :
-          Arrays.asList(
+          List.of(
               "BIT(1)",
               "DECIMAL",
               "INTEGER",
