@@ -20,6 +20,7 @@ import static us.fatehi.test.utility.extensions.FileHasContent.outputOf;
 
 import java.sql.Connection;
 import java.util.Arrays;
+import java.util.List;
 import org.junit.jupiter.api.BeforeAll;
 import org.junit.jupiter.api.DisplayName;
 import org.junit.jupiter.api.Test;
@@ -97,7 +98,7 @@ public class RoutineRetrieverProceduresTest {
 
     final RoutineRetriever procedureRetriever =
         new RoutineRetriever(retrieverConnection, catalog, options);
-    procedureRetriever.retrieveRoutines(Arrays.asList(RoutineType.procedure), new IncludeAll());
+    procedureRetriever.retrieveRoutines(List.of(RoutineType.procedure), new IncludeAll());
 
     final TestWriter testout = new TestWriter();
     try (final TestWriter out = testout) {
